# upolicycraft

./: .dockerignore  .gitignore  .travis.yml  Dockerfile  README.md
.github/workflows/: ci.yaml
bap-plugin/: _oasis  upolicycraft.ml  upolicycraft_lisp_io.ml
bap-plugin/abi/: core.asd  posix.h
bap-plugin/entrypoint/: Makefile  dune  dune-project  upc.ml
bap-plugin/site-lisp/: apr.lisp  ascii.lisp  assert.lisp  atoi.lisp  dirent.lisp  epoll.lisp  getopt.lisp  golang.lisp  grp.lisp  inet.lisp  langinfo.lisp  math.lisp  mman.lisp  posix.lisp  pwd.lisp  regex.lisp  resource.lisp  signal.lisp  socket.lisp  stat.lisp  stdio.lisp  string.lisp  time.lisp  upc-ascii.lisp  upc-atoi.lisp  upc-getopt.lisp  upc-stdio.lisp  upc-stdlib.lisp  upc-string.lisp  upc-unistd.lisp  user.lisp
debug/: Makefile  upc.c
docker/: Dockerfile  Dockerfile.experiment  Dockerfile.plugins  Dockerfile.util
experiments/nginx/: analysis.md  model.txt
notes/: README.md
notes/deprecated/: README.md  nginx.dot
notes/nginx/: analysis.md  nginx.sf  run.sh  simpler-model.txt
notes/scripts/: callgraphplot.py
notes/syscalls/: README.md  _oasis
remove_plt/: README.md  remove_plt.ml
sysmodel/: Makefile  README.md  bap.sh  hello.c  hello.dot  server-exploit.py  server.c  syscalls.ml
tests/: CADET_00001  README.md  apr  ctype  echo  env  errno  everybodys_got_something_to_hide  fds  fork  httpd  isalpha  nginx  nullhttpd  numbers  snprintf  str  time
tutorial/: README.md
uIDS/: .gitignore  README.md  _oasis  boot.sh  uids.ml  uids_lisp_io.ml
writeups/: README.md  nginx.md
(+774 files in other folders)
